objects/Dynamic_Content__c.object
<CustomObject>
    <description>Different kinds of content used in the Dynamic Banner component.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should this content be actively used in the Dynamic Banner component?</description>
        <inlineHelpText>Should this content be actively used in the Dynamic Banner component?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <description>What type of content does this record represent?  Different types of content are used in different ways.</description>
        <inlineHelpText>What type of content does this record represent?  Different types of content are used in different ways.</inlineHelpText>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Button - Flow</fullName>
                </value>
                <value>
                    <fullName>Button - Link</fullName>
                </value>
                <value>
                    <fullName>Content Card</fullName>
                </value>
                <value>
                    <fullName>Metric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flow_URL__c</fullName>
        <description>Flow API name or hyperlink/URL to direct the user to when they click on this content</description>
        <inlineHelpText>Flow API name or hyperlink/URL to direct the user to when they click on this content</inlineHelpText>
        <label>Flow/URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <description>SLDS icon to display</description>
        <inlineHelpText>SLDS icon to display</inlineHelpText>
        <label>Icon</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <description>Unique reference used to decide where this record&apos;s content should be used</description>
        <inlineHelpText>Unique reference used to decide where this record&apos;s content should be used</inlineHelpText>
        <label>Tag</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Label__c</fullName>
        <description>Title/headline/label</description>
        <inlineHelpText>Title/headline/label</inlineHelpText>
        <label>Title/Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URL_Behavior__c</fullName>
        <description>When clicked, should the URL be visited in the same window/tab (_self) or a new one (_new)?</description>
        <inlineHelpText>When clicked, should the URL be visited in the same window/tab (_self) or a new one (_new)?</inlineHelpText>
        <label>URL Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>_self</fullName>
                </value>
                <value>
                    <fullName>_new</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dynamic Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tag__c</columns>
        <columns>Content_Type__c</columns>
        <columns>Title_Label__c</columns>
        <columns>Icon__c</columns>
        <columns>Flow_URL__c</columns>
        <columns>URL_Behavior__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Dynamic Content</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>